--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,3 +23,4 @@
 </div>
 <button *ngIf="" (click)="selectArrow()">+</button>
 <button class="btn bg-primary">wert</button>
+<button class="btn btn-lg btn-danger">click me</button>
