--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,10 +1,10 @@
-
-<section>
+<div class="cart text-center">Shopping Cart</div>
+<section class="container">
     <div>
         <div>
-            <table class="table">
-                <thead class="table-head">
-                    <tr class="table-heading">
+            <table class="table table-striped table-dark">
+                <thead class="">
+                    <tr class="table-heading text-center">
                         <th>Sno</th>
                         <th>Name</th>
                         <th>Image</th>
@@ -13,7 +13,7 @@
                         <th>Total</th>
                     </tr>
                 </thead>
-                <tbody class="table-body">
+                <tbody class="table-body text-center">
                     <tr  *ngFor=" let products of product">
                      <td >{{products.sno}}</td>
                      <td><img class="pics" [src]="products.image" alt=""></td>
@@ -31,16 +31,4 @@
             </table>
         </div>
     </div>
-</section>
-<section>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <button type="button" class="btn btn-secondary">Secondary</button>
-    <button type="button" class="btn btn-success">Success</button>
-    <button type="button" class="btn btn-danger">Danger</button>
-    <button type="button" class="btn btn-warning">Warning</button>
-    <button type="button" class="btn btn-info">Info</button>
-    <button type="button" class="btn btn-light">Light</button>
-    <button type="button" class="btn btn-dark">Dark</button>
-    
-    <button type="button" class="btn btn-link">Link</button>
 </section>
