--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -1,7 +1,7 @@
-<p>user-register works!</p>
+
 <pre>{{User | json}}</pre>
 <section class="mt-3">
-    <div class="container">
+<div class="container">
         <div class="row">
             <div class="col-md-3">
                 <div class="card">
@@ -14,16 +14,16 @@
                                 <input name="name"
                                 [(ngModel)]="User.name" type="text" class="form-control" placeholder="Name">
                             </div>
-                            <!-- <div class="mb-2">
+                            <div class="mb-2">
                                 <input name="mail"
                                 [(ngModel)]="User.mail" type="text" class="form-control" placeholder="email">
-                            </div> -->
+                            </div>
                             <div class="mb-2">
                                 <input name="password"
                                 [(ngModel)]="User.password" type="text" class="form-control" placeholder="password">
                             </div>
                             <div class="mb-2">
-                                <select class="form-control">
+                                <select class="form-control" name="designation"  [(ngModel)]="User.designation" >
                                     <option value=""> Select Designation</option>
                                     <option value="Software Engineer"> Software Engineer</option>
                                     <option value="Sr Software Enginee"> Sr Software Engineer</option>
@@ -32,11 +32,11 @@
                                 </select>
                             </div>
                             <div class="mb-2">
-                                <textarea rows="4" cols="34" class="form-_control" placeholder="Bio"></textarea>
+                                <textarea name="bio" [(ngModel)]="User.bio" type="text" rows="4" cols="34" class="form-_control" placeholder="Bio"></textarea>
                                 
                             </div>
                             <div class="mb-2">
-                                <input type="checkbox" class="form-_control" placeholder="Name">Accepts Terms
+                                <input name="terms" [(ngModel)]="User.terms" type="checkbox" class="form-_control" placeholder="Name">Accepts Terms
                             </div>
                             <div class="mb-2">
                                 <input type="submit" class="btn btn-warning btn-sm" placeholder="Register">
