--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,24 @@
-<!-- <app-shopping-cart></app-shopping-cart>
+ <!-- <app-shopping-cart></app-shopping-cart>
  <app-user-register></app-user-register> 
 
-  <app-reactiveform></app-reactiveform> 
- <app-array-reactform></app-array-reactform>
+  <app-reactiveform></app-reactiveform>  -->
+  <!-- <app-array-reactform></app-array-reactform>  -->
+ <app-filter></app-filter>
 
- <app-form-validations></app-form-validations>  -->
- <nav class="navbar navbar-expand-lg navbar-light  bg-primary">
-  
+ <!-- <app-form-validations></app-form-validations>  --> 
+ <!-- <nav class="navbar navbar-expand-lg navbar-light  bg-primary">
+   -->
   <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button> -->
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <!-- <app-gallery-preview></app-gallery-preview> -->
+  
+  
+  
+  
+  
+  
+  <!-- <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a  routerLink="/shoppingcart" class="nav-link" href="#">ShoppingCart</a>
@@ -35,10 +43,31 @@
 </nav>
 
 
- <router-outlet></router-outlet>
+ <router-outlet></router-outlet> -->
 
 
-<!-- <button id="btn"  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!-- <button id="btn"  
   (click)="getData()" class="btn btn-primary btn-lg">click me</button>
 
 
@@ -47,9 +76,11 @@
    
    <img  *ngFor="let product of data.photos" (click)="showsImageBig(product)" class="button" [src]=product.urls.small  alt="uday">
   <p  *ngFor="let product of data.name">{{product}}</p>
-</div>
- <button  (click)="selectLeftArrow()">-</button> -->
+</div> -->
+ <!-- <button  (click)="selectLeftArrow()">-</button>  -->
 <!-- <div>
    <img class="bigImage" [src]="clickedimage?.urls?.small" alt="">
 </div>
-<button *ngIf="" (click)="selectArrow()">+</button> --> 
+button *ngIf="" (click)="selectArrow()">+</button>  -->
+<!-- <app-gallery-preview></app-gallery-preview> -->
+<!-- <app-dash></app-dash> -->
