--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,8 +1,7 @@
 
 
 
-<button id="btn"  [hidden]="!inboundClick" 
-(click)="inboundClick = !inboundClick"  (click)="getData()" class="btn btn-success btn-lg">click me</button>
+<button id="btn"   class="btn btn-success btn-lg">click me</button>
 
 <div class="text-center">
   <img class="bigImage" [src]="clickedimage?.urls?.small" alt="">
