--- a/src/app/array-reactform/array-reactform.component.html
+++ b/src/app/array-reactform/array-reactform.component.html
@@ -4,7 +4,7 @@
     <div formArrayName="mobiles">
         <div *ngFor="let m of testForm.controls['mobiles']['controls'];  index as i" class="d-flex">
         <!-- <div>mobileName:</div> -->
-        MobileNumber{{i+1}}<input type="text" formControlName="{{i}}" class="form-control m-2 w-25">
+           MobileNumber{{i+1}}<input type="text" formControlName="{{i}}" class=" m-2 w-25">
            <div>
                <button class="btn btn-danger" type="button" (click)="remove(i)">X</button>
            </div>
